Fix wrapping of header breakpoints on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -93,14 +93,15 @@ header {
   display: flex;
   position: fixed;
   top: 0;
-  padding-bottom: 10px;
-  height: 57px;
+  /* padding-bottom: 10px; */
+  min-height: 57px;
   flex-direction: row;
   align-items: center;
   width: auto;
   z-index: 999;
   margin-left: 10%;
   margin-right: 10%;
+  flex-wrap: wrap;
 }
 
 .header-logo {
@@ -141,7 +142,7 @@ main {
   border-left-style: solid;
   padding-left: 5px;
   margin-left: 10%;
-  margin-right: 10%;
+  margin-right: 1%;
 }
 
 .searchbar {
